Fixed vertical overflows to show

--- a/src/WebPages/Help/Help.css
+++ b/src/WebPages/Help/Help.css
@@ -1,7 +1,5 @@
 .Help {
     display: grid;
-    overflow: hidden;
-
     width: 100%;
     height: 100%;
     text-align: center;
@@ -18,7 +16,6 @@
 .Help .help_section * {
     text-align: center;
     justify-self: center;
-
     margin: 0 auto;
     font-size: 3rem;
 }
@@ -32,7 +29,6 @@
 .Help .logoETIC {
     width: 220px;
     margin-bottom: 0px;
-    
 }
 
 .Help .actu {
@@ -42,22 +38,22 @@
 
 .Help .social * {
     text-decoration: none;
-    text-align: center ;
+    text-align: center;
     width: 50px;
     margin-right: 10px;
     margin-left: 10px;
     margin-top: 15px;
 }
 
-  .Help .explications {
+.Help .explications {
     color: #0c7466;
     font-size: 1rem;
-    text-align: left;
+    text-align: center;
 }
-  .Help .contact.toCopy {
+
+.Help .contact.toCopy {
     cursor: pointer;
     color: #009e11;
-    
     background: white;
     border: 0;
     text-decoration: underline;
@@ -71,7 +67,7 @@
     color: white;
     font-size: 2vw;
     padding: 0.3vmin;
-    margin: 1vw auto ;
+    margin: 1vw auto;
     width: auto;
 }
 
