--- a/src/index.css
+++ b/src/index.css
@@ -8,20 +8,17 @@ body {
     padding: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
-    font-family: 'HKGroteskRegular',sans-serif;
+    font-family: 'HKGroteskRegular', sans-serif;
     /* font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif; */
 }
 
 #root {
     display: grid;
     grid-template-rows: 6.5vw 2.5vmax 1fr;
-
     width: 100%;
     height: 100%;
 }
 
 code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
